--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
-    "core-js": "^3.40.0"
+    "core-js": "^3.40.0",
+    "gh-pages": "^6.3.0"
   }
 }
