--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "cssnano": "^7.0.6",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "postcss-loader": "^8.1.1",
@@ -35,7 +36,6 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
-    "core-js": "^3.40.0",
-    "gh-pages": "^6.3.0"
+    "core-js": "^3.40.0"
   }
 }
